--- a/anime.html
+++ b/anime.html
@@ -18,6 +18,7 @@
                 <span>Super Anime!</span>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                   <"img src="images/boruto_header2-1038x576.jpg">
             </div>
         </div>
     </div>
