--- a/anime.html
+++ b/anime.html
@@ -8,9 +8,9 @@
 <body>
     <div class="about-section">
         <div class="inner-container">
-            <h1>About Us</h1>
+            <h1>About Boruto!</h1>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+                Boruto is a spin-off and a sequel to Kishimoto's Naruto, which follows the exploits of Naruto Uzumaki's son, Boruto Uzumaki, and his ninja team. Boruto originated from Shueisha's proposal to Kishimoto on making a sequel to Naruto.
             </p>
             <div class="skills">
                 <span>Boruto Infomration.</span>
